5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1596_825.log
== SUBMITION (2019-04-02 17:38:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
from math import*
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- EXECUTION TIME:
0.201147
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 5
    from math import*
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:40:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
from math import*
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
from math import *
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    from math import *
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
(from math import *)
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    (from math import *)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
from math import*
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:45:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
from math import*
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:46:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
from math import *
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    from math import *
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
pi= math.pi
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    pi= math.pi
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
pi=math.pi
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    pi=math.pi
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
math.pi
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    math.pi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
from math.pi
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    from math.pi
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
import math
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    import math
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
import math from
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    import math from
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
import math from*
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    import math from*
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:52:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
import math
math.pi
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    import math
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:52:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
import math
math.pi
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- EXECUTION TIME:
0.267054
-- ERROR:
  File "/home/codebench/codes/1596/825/main.py", line 5
    import math
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:52:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("digite o raio:")
import math.pi
math.pi
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 5
    import math.pi
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:53:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
raio=float(input("digite o raio:")
area=pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 6
    area=pi * raio ** 2
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:53:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
raio=float(input("digite o raio:"))
area= pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area= pi * raio ** 2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:53:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
raio=float(input("digite o raio:"))
area= pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- EXECUTION TIME:
0.264381
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/825/main.py", line 6, in <module>
    area= pi * raio ** 2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:53:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
raio=float(input("digite o raio:"))
area= pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area= pi * raio ** 2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:54:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
raio=float(input("digite o raio:"))
area= pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:54:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio=float(input("digite o raio:"))
area= pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:54:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
raio=float(input("digite o raio:"))
area= pi * raio ** 2
volume= 4/3 * pi * raio ** 3
print(round(area, 3))
print(round(volume, 3))
		
-- EXECUTION TIME:
0.151251
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
